put article and put blog routes
