# app/Http/Requests/UpdateArticleRequest.php
@@ -13,7 +13,7 @@ class UpdateArticleRequest extends FormRequest
      */
     public function authorize()
     {
-        return false;
+        return true;
     }
 
     /**
@@ -24,7 +24,14 @@ class UpdateArticleRequest extends FormRequest
     public function rules()
     {
         return [
-            //
+            'title' => ['required', 'string', 'max:255'],
+            'url' => ['required', 'url', 'max:255', 'unique:articles,url'],
+            'imageUrl' => ['required', 'url', 'max:255'],
+            'newsSite' => ['required', 'max:255'],
+            'summary' => ['required', 'string', 'max:255'],
+            'publishedAt' => ['required', 'string', 'max:255'],
+            'updatedAt' => ['required', 'string', 'max:255'],
+            'featured' => ['required', 'boolean']
         ];
     }
 }
