# app/Http/Requests/UpdateBlogRequest.php
@@ -3,6 +3,7 @@
 namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Http\Request;
 
 class UpdateBlogRequest extends FormRequest
 {
@@ -13,7 +14,7 @@ class UpdateBlogRequest extends FormRequest
      */
     public function authorize()
     {
-        return false;
+        return true;
     }
 
     /**
@@ -24,7 +25,13 @@ class UpdateBlogRequest extends FormRequest
     public function rules()
     {
         return [
-            //
+            'title' => ['required', 'string', 'max:255'],
+            'url' => ['required', 'url', 'max:255', 'unique:blogs,url'],
+            'imageUrl' => ['required', 'url', 'max:255'],
+            'newsSite' => ['required', 'max:255'],
+            'summary' => ['required', 'string', 'max:255'],
+            'publishedAt' => ['required', 'string', 'max:255'],
+            'updatedAt' => ['required', 'string', 'max:255']
         ];
     }
 }
